# my-product-api

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: api-development.mdc  development-workflow.mdc  git-workflow.mdc  pep8-enforcement.mdc  python-structure.mdc  testing.mdc
docs/: requirements.md
product_api/: main.py  models.py  storage.py
tests/: context.py  test_create_api.py  test_get_api.py  test_main.py  test_models.py  test_storage.py
